# non_local_detector

./: .gitignore  CLAUDE.md  GEMM_IMPLEMENTATION_SUMMARY.md  GEMM_OPTIMIZATION.md  LICENSE  PERFORMANCE_BASELINES.md  README.md  SIMULATOR_REFACTORING_STATUS.md  benchmark_gemm.py  environment.yml  environment_gpu.yml  package-lock.json  pyproject.toml
docs/: TASKS.md  (+2 more)
src/non_local_detector/: __init__.py  _validation.py  bundle.py  continuous_state_transitions.py  core.py  detector.py  diffusion_kernels.py  discrete_state_transitions.py  environment.py  exceptions.py  initial_conditions.py  observation_models.py  pyproject.toml  streaming.py  types.py  validation.py  visualization.py
src/non_local_detector/analysis/: __init__.py  distance1D.py  distance2D.py  highest_posterior_density.py  posterior.py
src/non_local_detector/encoding/: base.py
src/non_local_detector/environment/: __init__.py  alignment.py  calibration.py  composite.py  core.py  distance.py  environment.py  environment_with_engine.py  geometry_engines.py  geometry_utils.py  graph_utils.py  hex_grid_utils.py  layout_engine.py  region.py  regions.py  regular_grid_utils.py  transforms.py  utils.py
src/non_local_detector/environment/layout/: __init__.py  base.py  factories.py  graph.py  hex_grid.py  hex_grid_utils.py  layout_engine.py  mixins.py  regular_grid.py  regular_grid_utils.py  triangular.py  utils.py
src/non_local_detector/environment/regions/: __init__.py  core.py  io.py  ops.py  plot.py
src/non_local_detector/io/: preprocessing.py  validation_extras.py
src/non_local_detector/io/tests/: test_preprocessing.py
src/non_local_detector/likelihoods/: __init__.py  clusterless_diffusion_kde.py  clusterless_gmm.py  clusterless_kde.py  clusterless_kde2.py  clusterless_kde_jax.py  clusterless_kde_log.py  common.py  gmm.py  no_spike.py  sorted_spikes_diffusion_kde.py  sorted_spikes_glm.py  sorted_spikes_glm_jax.py  sorted_spikes_kde.py  sorted_spikes_kde2.py  sorted_spikes_kde_jax.py  sorted_spikes_kde_np.py
src/non_local_detector/model/: state_spec.py
src/non_local_detector/model_checking/: __init__.py  clusterless.py  highest_posterior_density.py  posterior_consistency.py  sorted_spikes.py
src/non_local_detector/models/: __init__.py  _defaults.py  base.py  cont_frag_model.py  cont_frag_model_defaults.py  decoder.py  generic.py  multienvironment_model.py  multienvironment_model_defaults.py  non_local_model.py  non_local_model_defaults.py  nospike_cont_frag_model.py
src/non_local_detector/observations/: base.py
src/non_local_detector/simulate/: clusterless_simulation.py  dense_probe_simulation.py  probe_geometry.py  simulate.py  sorted_spikes_simulation.py  spike_localization.py
src/non_local_detector/tests/: _sim_contract.py  conftest.py  regression_report.py  test_alignment.py  test_analysis_distance.py  test_analysis_posterior.py  test_api_surface.py  test_bundle.py  test_clusterless_gmm_optimization.py  test_clusterless_likelihood_agreement.py  test_continuous_transitions_extended.py  test_dense_probe_simulation.py  test_discrete_state_transitions.py  test_discrete_transitions_estimation.py  test_em_monotonicity.py  test_environment.py  test_environment_validation.py  test_exceptions.py  test_golden_regression.py  test_graph_utils.py  test_hex_grid_utils.py  test_initial_conditions.py  test_layout_engine.py  test_memory_model.py  test_model_checking.py  test_non_local_penalty.py  test_non_local_penalty_effect.py  test_non_local_posterior_bugs.py  test_oracle_correctness.py  test_posterior_properties.py  test_probe_presets_and_localization.py  test_regular_grid_utils.py  test_simulator_contract.py  test_simulator_properties.py  test_streaming_predict.py  test_utils.py  test_validation.py
src/non_local_detector/tests/__snapshots__/: test_discrete_state_transitions.ambr  test_environment_validation.ambr  test_initial_conditions.ambr
src/non_local_detector/tests/api_snapshots/: public_api.json
src/non_local_detector/tests/core/: __init__.py  test_chunked_parity.py  test_core_utilities.py  test_hmm_algorithms.py
src/non_local_detector/tests/environment/: conftest.py  test_alignment.py  test_composite.py  test_environment.py  test_get_bin_ind_snap.py  test_layout_engine.py  test_multi_edge_track_graph.py  test_region.py  test_track_graph.py
src/non_local_detector/tests/golden_data/: clusterless_decoder_golden.pkl  clusterless_decoder_inputs.pkl  nonlocal_detector_golden.pkl  nonlocal_detector_inputs.pkl  random_walk_transition_golden.pkl  random_walk_transition_inputs.pkl  sorted_spikes_decoder_golden.pkl  sorted_spikes_decoder_inputs.pkl
src/non_local_detector/tests/integration/: test_clusterless_kde_gemm.py  test_clusterless_kde_parity.py  test_core_covariate_dependent.py  test_core_kde_integration.py  test_local_spatial_uncertainty.py  test_position_tiling.py  test_public_api_streaming.py  test_simulation_models.py
src/non_local_detector/tests/likelihoods/: test_auto_tiling.py  test_clusterless_kde.py  test_clusterless_kde_log_optimization.py  test_clusterless_kde_log_optimization_parity.py  test_clusterless_kde_log_parity.py  test_clusterless_kde_optimization.py  test_electrode_scan.py  test_enc_tile_size.py  test_gmm_kde_convergence.py  test_jit_block_estimate.py  test_kde_common.py  test_kde_gmm_comparison.py  test_kde_gmm_equivalence.py  test_kde_gmm_numerical_comparison.py  test_likelihood_cross_model.py  test_likelihood_edge_cases.py  test_likelihood_properties.py  test_local_kde_log_stability.py  test_regression_snapshots.py  test_sorted_spikes_glm.py  test_sorted_spikes_kde.py  test_streaming_integration.py
src/non_local_detector/tests/models/: __init__.py  test_base_initialization.py  test_base_validation.py  test_frozen_transition_rows.py  test_local_position_std.py  test_local_position_std_snapshot.py  test_model_variants.py  test_non_local_penalty_topology.py  test_position_dimensionality_validation.py  test_predict_covariate_transitions.py  (+1 more)
src/non_local_detector/visualization/: __init__.py  _parallel_video_writer.py  figurl_1D.py  figurl_2D.py  movie.py  static.py
(+188 files in other folders)
